--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      CACHE_IMAGE: "ghcr.io/ibm/text-gen-router:build-cache"
+      CACHE_IMAGE: "ghcr.io/sanketha_cr/cloudpak/text-gen-router:build-cache"
       CACHE_REGISTRY: "ghcr.io"
       QUAY_REPOSITORY: "quay.io/sanketha_cr/cloudpak/text-gen-router"
 
